@@ -26,6 +26,10 @@ $ -> Language fix or change
 ! -> Note
 
 2014-05-06 Christophe Demko <chdemko@gmail.com>
+	* examples/Examples.java
+		^ Use new methods for saving and parsing
+
+2014-05-06 Christophe Demko <chdemko@gmail.com>
 	* src/lattice/Context.iuml
 	* src/lattice/Context.java
 	* src/lattice/ImplicationalSystem.iuml
